# Richman

./: .clangd  .gitignore  C project.code-profile  CMakeLists.txt  README.md  build_win.bat  conan_profile_x64  conanfile.txt  main.c  rerun-failed.bat  run.bat  test.bat  test.py  test_without_arge.py
.res/: users.json
.test/test1/: expected_output.txt  input.txt
.test/test10/: input.txt
.test/test2/: expected_output.txt  input.txt
.test/test201/: expected_output.json  input.txt  output.json
.test/test3/: expected_output.txt  input.txt
.test/test4/: expected_output.txt  input.txt  test4.txt
.test/test5/: input.txt
.test/test6/: expected_output.txt  input.txt
.test/test7/: expected_output.txt  input.txt  test7.txt
.test/test8/: expected_output.txt  test8.txt
.test/test9/: expected_output.txt  test9.txt
.test/test_earth_up_rank_1_kind0_buy/: expected_output.json  output.json
.test/test_earth_up_rank_1_kind0_not_buy/: expected_output.json  output.json
.test/test_earth_up_rank_1_not_enough/: expected_output.json  output.json
.test/test_earth_up_rank_2_kind0_buy/: expected_output.json
.test/test_earth_up_rank_2_kind0_not_buy/: expected_output.json
.test/test_earth_up_rank_2_kind1_buy/: expected_output.json
.test/test_earth_up_rank_2_kind1_not_buy/: expected_output.json
.test/test_earth_up_rank_2_kind2_buy/: expected_output.json
.test/test_earth_up_rank_2_kind2_not_buy/: expected_output.json
.test/test_earth_up_rank_2_kind3/: expected_output.json
.test/test_earth_up_rank_2_not_enough/: expected_output.json  output.json
.test/test_earth_up_rank_3_kind3/: expected_output.json
.test/test_earth_up_rank_3_not_enough/: expected_output.json  output.json  user.json
.test/test_mine_64/: expected_output.json  output.json  user.json
.test/test_mine_65/: expected_output.json  output.json
.test/test_mine_66/: expected_output.json  output.json
.test/test_mine_67/: expected_output.json  output.json
.test/test_mine_68/: expected_output.json  output.json
.test/test_mine_69/: expected_output.json  output.json
.test/test_pay_money_all_not_enough_rank1_kind0/: expected_output.json  output.json
.test/test_pay_money_all_not_enough_rank1_kind1/: output.json
.test/test_pay_money_all_not_enough_rank1_kind2/: expected_output.json  output.json
.test/test_pay_money_all_not_enough_rank1_kind3/: output.json
.test/test_pay_money_all_not_enough_rank2_kind0/: expected_output.json  output.json
.test/test_pay_money_all_not_enough_rank2_kind1/: expected_output.json  output.json
.test/test_pay_money_all_not_enough_rank2_kind2/: expected_output.json  output.json
.test/test_pay_money_all_not_enough_rank2_kind3/: expected_output.json  output.json
.test/test_pay_money_all_not_enough_rank3_kind0/: expected_output.json  output.json
.test/test_pay_money_all_not_enough_rank3_kind1/: output.json
.test/test_pay_money_all_not_enough_rank3_kind2/: expected_output.json  (+1 more)
.vscode_example/: launch.json
doc/: 任务表及燃尽图.doc
include/: buy_earth.h  clean_body.h  earthup.h  gifthouse.h  god_appar.h  god_appear.h  help.h  init_play.h  interaction.h  kmp.h  map.h  mine_earth.h  operations.h  palyers.h  pass_road_money.h  players.h  query.h  roll.h  sell_house.h  tool_house.h  useprops.h
src/: buy_earth copy.c  buy_earth.c  clean_body.c  earthup.c  gifthouse.c  god_appar.c  god_appear.c  help.c  init_play.c  interaction.c  kmp.c  map.c  mine_earth.c  operations.c  pass_road_money.c  players.c  query.c  roll.c  sell_house.c  tool_house.c  useprops.c  utils.h
(+105 files in other folders)
